# deep-thonk-3d

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Mvp-0.md  README.md  install_qt6.sh  run.sh
docs/: Architecture.md  Project.md
resources/rules/: en-US.json  pt-BR.json
src/: CMakeLists.txt  main.cpp  resources.qrc
src/core/rogerian/: Engine.cpp  Engine.h  Rules.h
src/ui/bridge/: Bridge.cpp  Bridge.h
src/ui/model/: RuleModel.cpp  RuleModel.h  TreeItem.cpp  TreeItem.h
src/ui/qml/: Main.qml
tests/: CMakeLists.txt  main.cpp  test_engine.cpp  test_engine.h
